@@ -64,8 +64,18 @@ table.types th { border: 1px solid; padding: .1em .25em; }
 </td><td>Variation of linkdelight
 </td></tr><tr><td>linkdelight_3</td><td>320 x 240</td><td>Yes</td><td><a href="http://www.ebay.de/itm/260978964426?ssPageName=STRK:MEWNX:IT&amp;_trksid=p3984.m1439.l2649">Link</a>
 </td><td>Variation of linkdelight
+</td></tr><tr><td>linkdelight_4</td><td>320 x 240</td><td>Yes</td><td><a href="http://www.ebay.de/itm/260978964426?ssPageName=STRK:MEWNX:IT&amp;_trksid=p3984.m1497.l2649">Link</a>
+</td><td>Another variation of linkdelight
 </td></tr><tr><td>pearl</td><td>320 x 240</td><td>No</td><td><a href="http://www.pearl.de/a-HPM1184-5618.shtml">Link</a>
 </td><td>Buildin (generic) lcd-controller definition (landscape)
 </td></tr><tr><td>pearl_custom</td><td>320 x 240</td><td>Yes</td><td><a href="http://www.pearl.de/a-HPM1184-5618.shtml">Link</a>
 </td><td>Custom (flash-dump based) version of pearl
+</td></tr><tr><td>pt824</td><td>320 x 240</td><td>Yes</td><td><a href="http://item.taobao.com/item.htm?id=9197767508">Link</a>
+<a href="http://www.longmatech.com/index.php/product/PT824A.html">Link</a>
+<a href="http://www.longmatech.com/index.php/product/PT824A.html">Link</a>
+<a href="http://lucy89.en.made-in-china.com/product/RbUxXeCrhvcJ/China-Christmas-Gifts-Digital-Photo-Frame-PT824b.html">Link</a>
+<a href="http://konsun.appliances-china.com/Product_Look.php?ID=100077">Link</a>
+<a href="http://www.corpmarket.com/sell/2-4inch-digital-photo-frame-PT824C-detail-1245-747967.html">Link</a>
+<a href="http://www.gongchang.com/2_4_inch_color_LCD_display_PT824C_digital_picture_viewer_heart_shaped-dp621446/">Link</a>
+</td><td>Should work with PT824A/B/C.
 </td></tr></table></BODY></HTML>
