@@ -1,0 +1,59 @@
+	.include 'dpf.inc'
+
+	.area LCDAUX (CODE)
+
+_lcd_custom_init::
+	mov	dptr,#_custom_initseq
+	ljmp	_lcd_init_by_table
+
+_lcd_custom_setcontrast::
+	ljmp	_lcd_set_contrast_by_table
+
+	.area LCDAUX (CODE)
+
+_custom_contrasttbl::
+  .db  0x10, 0x10, 0x10, 0x10, 0x10, 0x10, 0x10
+_custom_contrasttbl_len::  .db  7
+
+_custom_contrasttbl2::
+  .db  0x71, 0x00, 0x71, 0x00, 0x91, 0x00, 0x91, 0x00, 0xff
+_custom_contrasttbl2_len::  .db  9
+
+_custom_contrasttbl2_offsets::
+  .db  0x07
+_custom_contrasttbl2_offsets_len::  .db  1
+
+_custom_backlighttbl::
+  .db  0xbb, 0xb6, 0xb1, 0xac, 0xa7, 0xa2, 0x9d, 0x98, 0x93, 0x8e
+  .db  0x89, 0x84, 0x7f, 0x7a, 0x75, 0x70, 0x6b, 0x66, 0x61, 0x5c
+  .db  0x57, 0x52
+_custom_backlighttbl_len::  .db  22
+
+_custom_backlighttbl2::
+_custom_backlighttbl2_len::  .db  0
+
+_custom_initseq::
+  .db  0x00, 0xb0, 0x64, 0x11, 0xb0, 0x0a, 0x10, 0xb0, 0x64, 0x11
+  .db  0xb0, 0xff, 0x72, 0x00, 0x01, 0x92, 0x01, 0x00, 0x72, 0x00
+  .db  0x02, 0x92, 0x07, 0x00, 0x72, 0x00, 0x08, 0x92, 0x03, 0x02
+  .db  0x72, 0x00, 0x09, 0x92, 0x00, 0x00, 0x72, 0x00, 0x0a, 0x92
+  .db  0x00, 0x08, 0x72, 0x00, 0x03, 0x92, 0x10, 0xa8, 0x72, 0x00
+  .db  0x10, 0x92, 0x00, 0x00, 0x72, 0x00, 0x11, 0x92, 0x00, 0x05
+  .db  0x72, 0x00, 0x12, 0x92, 0x00, 0x00, 0x72, 0x00, 0x13, 0x92
+  .db  0x00, 0x00, 0x72, 0x00, 0x10, 0x92, 0x12, 0xb0, 0x72, 0x00
+  .db  0x11, 0x92, 0x00, 0x07, 0x72, 0x00, 0x12, 0x92, 0x00, 0x8c
+  .db  0x72, 0x00, 0x13, 0x92, 0x17, 0x00, 0x72, 0x00, 0x29, 0x92
+  .db  0x00, 0x20, 0x72, 0x00, 0x75, 0x92, 0x00, 0x00, 0x72, 0x00
+  .db  0x30, 0x92, 0x00, 0x00, 0x72, 0x00, 0x31, 0x92, 0x01, 0x06
+  .db  0x72, 0x00, 0x32, 0x92, 0x01, 0x01, 0x72, 0x00, 0x35, 0x92
+  .db  0x01, 0x06, 0x72, 0x00, 0x36, 0x92, 0x02, 0x03, 0x72, 0x00
+  .db  0x37, 0x92, 0x00, 0x00, 0x72, 0x00, 0x38, 0x92, 0x07, 0x07
+  .db  0x72, 0x00, 0x39, 0x92, 0x02, 0x04, 0x72, 0x00, 0x3c, 0x92
+  .db  0x01, 0x06, 0x72, 0x00, 0x3d, 0x92, 0x01, 0x03, 0x72, 0x00
+  .db  0x50, 0x92, 0x00, 0x00, 0x72, 0x00, 0x51, 0x92, 0x00, 0xef
+  .db  0x72, 0x00, 0x52, 0x92, 0x00, 0x00, 0x72, 0x00, 0x53, 0x92
+  .db  0x01, 0x3f, 0x72, 0x00, 0x60, 0x92, 0xa7, 0x00, 0x72, 0x00
+  .db  0x61, 0x92, 0x00, 0x01, 0x72, 0x00, 0x90, 0x92, 0x00, 0x30
+  .db  0x72, 0x00, 0x07, 0x92, 0x01, 0x33, 0xff
+_custom_initseq_len::  .db  217
+
